Updated to Kotlin RC

--- a/build.xml
+++ b/build.xml
@@ -70,4 +70,8 @@
     nbproject/build-impl.xml file. 
 
     -->
+
+    <target name="-do-jar">
+        <jar destfile="dist/Ganymede.jar" basedir="out/production/ganymede" />
+    </target>
 </project>
